[??-??-??] - Version 0.9.7
	* Updated INFO section of the extension to show libXL version


[2011-10-12] - Version 0.9.6
	* Added new methods (requires LibXL 3.2.3+):
		- ExcelSheet::isHidden() that whether sheet is hidden.
		- ExcelSheet::setHidden(bool flag) that hides/unhides the sheet.
	* Allow compilation against LibXL 3.2.3/3.2.2
	* Added a work-around for image index bug inside LibXL 3.2.2

[2011-08-03] - Version 0.9.1
	* Added new methods (requires LibXL 3.2.0+):
		- ExcelSheet::setPrintFit(int wPages, int hPages) that fits sheet width and sheet height to wPages and hPages respectively
		- ExcelSheet::getPrintFit() that returns whether fit to page option is enabled, and if so to what width & height
		- ExcelSheet::getNamedRange(string name) that gets the named range coordianates by name, returns false if range is not found
		- ExcelSheet::getIndexRange(int index) that gets the named range coordianates by index, returns false if range is not found
		- ExcelSheet::namedRangeSize() that returns the number of named ranges in the sheet
		- ExcelSheet::getVerPageBreak(int index) that returns column with vertical page break at position index
		- ExcelSheet::getVerPageBreakSize() that returns a number of vertical page breaks in the sheet
		- ExcelSheet::getHorPageBreak(int index) that eturns column with horizontal page break at position index
		- ExcelSheet::getHorPageBreakSize() that returns a number of horizontal page breaks in the sheet
		- ExcelSheet::getPictureInfo(int index) that returns a information about a workbook picture at position index in worksheet
		- ExcelSheet::getNumPictures() that returns a number of pictures in this worksheet
		- ExcelBook::biffVersion() that returns BIFF version of binary file. (Used for xls format only)
		- ExcelBook::getRefR1C1() that returns whether the R1C1 reference mode is active
		- ExcelBook::setRefR1C1(bool active) that sets the R1C1 reference mode